--- a/contribution.html
+++ b/contribution.html
@@ -329,7 +329,39 @@
                           <p>Since its founding in 2002, IPA has produced and tested over 550 solutions to poverty-related concerns. 
                           IPA has collaborated with over 600 researchers to undertake over 830 evaluations in 51 countries since its inception.
                           It has resulted in the creation of successful programs that have a global impact on millions of people.</p>
-                      
+                 
+                          <!--Footer starts here-->
+  <footer>
+    <div class="footer-content">
+        <h3 class="foottext">Gather With Grow Together</h3>
+        <p>There are tons of people all around the world, suffering from poverty day by day.Therefore,
+          here is the unite of the Non-Government Organizations, Volunteers and all the warm-hearted
+          people who raise hands to Grow Together."Grow Together" is the cloud-based platform of all
+          these people.</p>
+        <ul class="socials">
+            <li><a href="www.facebook.com"><i class="fa fa-facebook"></i></a></li>
+            <li><a href="www.twitter.com"><i class="fa fa-twitter"></i></a></li>
+            <li><a href="www.plus.google.lk"><i class="fa fa-google-plus"></i></a></li>
+            <li><a href="www.youtube.com"><i class="fa fa-youtube"></i></a></li>
+            <li><a href="www.linkedin.microsoft.com"><i class="fa fa-linkedin-square"></i></a></li>
+        </ul>
+    </div>
+    <div class="footer-bottom">
+        <p>copyright &copy; <a href="#">GrowTogether</a>  </p>
+                <div class="footer-menu">
+                  <ul class="f-menu">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="action.html">Action</a></li>
+                    <li><a href="volunteer.html">Volunteer</a></li>
+                    <li><a href="donations.html">Donate</a></li>
+                    <li><a href="aboutus.html">Contact Us</a></li>
+                  </ul>
+                </div>
+    </div>
+
+</footer>
+<!--Footer ends here-->
+
         </body>
     </head>
 </html>
