--- a/action.html
+++ b/action.html
@@ -82,25 +82,21 @@
 <!--End of navbar  and slideshow-->
 
 
-<h1> <center> <b> Take Actions to End Poverty </b> </center> </h1>
+<h1> <center> <b> Take Actions to End Poverty..</b> </center> </h1>
 
 <br>
    <!--intro paragraph-->
  <div class="para">
-	<p>  The fight against global poverty can be a discouraging one. The number of people suffering is hard to imagine.
+	<p class="para001">  The fight against global poverty can be a discouraging one. The number of people suffering is hard to imagine.
 		While there is a multitude of poverty-stricken individuals, things are not entirely bleak.Poverty rates have been raising in recent years
 		because of the pandemic and many other reasons. 
 		the COVID-19 pandemic could increase global poverty by as much as half a billion people,  or 8% of the total human population. In April 2020,
 		the United Nations issued <a href="https://www.un.org/sites/un2.un.org/files/un_framework_report_on_covid-19.pdf" target="_blank"> framework
 		for the immediate socio-economic response to COVID-19</a> and created the Secretary-General's UN COVID-19 Response and Recovery Fund. 
-		Before the pandemic, significant progress had been made in alleviating poverty in many countries within Eastern and Southeastern Asia,
-		but up to 42 per cent of the population in Sub-Saharan Africa continued to live below the poverty line.
-		As people, we can make a difference in this fight with the right approach.With the right policy choices, we can 
-		move the needle on poverty, expand the middle class, and put the economy on an upward trajectory.
-		Work is a major route for many to escape poverty. However, working alone does not guarantee this, particularly if working conditions are not decent. 
-		In 2019, more than 630 million workers worldwide — almost one in five of all those employed — did not earn enough to lift themselves and their 
-		families out of extreme or moderate poverty. 
-    
+		<b>Grow Together</b> us believe that, as a community we can make a difference in this fight with the right approach.With the right policy choices, we can 
+		move the needle on poverty, expand the middle class, and put the economy on an upward trajectory. However, working alone does not guarantee.
+
+  </div>
   </p>
 
  <hr>
@@ -108,7 +104,7 @@
       <br>
 
 
-  <p> The UN has defined 7 Targets and 14 Indicators for SDG 1 ,Poverty. Targets specify the goals and Indicators represent the metrics by which the world aims
+  <p class="para001"> The UN has defined 7 Targets and 14 Indicators for SDG 1 ,Poverty. Targets specify the goals and Indicators represent the metrics by which the world aims
       to track whether these Targets are achieved. Below we quote the original text of all Targets. The targets were adopted by the United Nations in 2015 as a
 	  universal call to action to end poverty,  and ensure that by 2030 all people enjoy development and prosperity.
   </div>
@@ -122,7 +118,7 @@
 <br>
 <br>
 <hr>
-<h3> <center> The Targets </center> </h3>
+<h3> <center><b> The Targets</b> </center> </h3>
 
 <br>
 <br>
@@ -139,14 +135,14 @@
  <br>
  <br>
 <div class="para">
-<p> SDG INDICATOR 1.1.1 </p>
+<p> <b> INDICATOR 1.1.1 </b> </p>
 
 <br>
-<p>Definition: Indicator 1.1.1 is the proportion of population below the international poverty line, by sex, age, employment status and geographical
- location (urban/rural).
+<p>Definition:<i> Indicator 1.1.1 is the proportion of population below the international poverty line, by sex, age, employment status and geographical
+ location (urban/rural).</i>
 This poverty line is measured in "international dollars" which are a hypothetical currency that adjusts for price differences between countries 
 (purchasing power parity) and it is measured in prices of 2011 to adjust for price changes over time (inflation).</p>
- 
+ <br>
 <p><b>Goal - </b> By 2030 eradicate extreme poverty for all people everywhere, currently measured as people living on less than $1.90 a day.</p>
 
 <br>
@@ -188,13 +184,14 @@ This poverty line is measured in "international dollars" which are a hypothetica
 <br>
 
 <div class="para">
-<p> SDG INDICATOR 1.2.1 </p>
+<p> <b>SDG INDICATOR 1.2.1 </b></p>
 
-<p>  Halve population below national poverty line  </p>
+<p> <b>Halve population below national poverty line </b> </p>
 
 <br>
 
-<p> Definition: Indicator 1.2.1 is the proportion of population living below the national poverty line. </p>
+<p> Definition: <i>Indicator 1.2.1 is the proportion of population living below the national poverty line. </i> </p>
+<br>
 <p> <b>Goal - </b>  By 2030 reduce at least by half the proportion of men, women and children of all ages living in poverty in all 
 its dimensions according to national definitions.</p>
 
@@ -205,7 +202,7 @@ its dimensions according to national definitions.</p>
 <br>
 <br>
 <p><b> Additional charts:</b> </p>
-<br>
+
 <a href="https://ourworldindata.org/grapher/urban-poverty-at-national-poverty-lines" target="_blank">Population living below national poverty line in urban areas</a> 
 
 <br>
@@ -216,18 +213,17 @@ areas</a>
 <br>
 <br>
 <br>
+<br>
+<br>
 <b>SDG INDICATOR 1.2.2 </b>
 
-<p>  Population in poverty according to national definitions </p>
+<p> <b> Population in poverty according to national definitions</b> </p>
 
 <br>
-<p> Definition: Indicator 1.2.2 is the proportion of men, women and children of all ages living in poverty in all its dimensions according to national definitions.
-
+<p> Definition:<i>Indicator 1.2.2 is the proportion of men, women and children of all ages living in poverty in all its dimensions according to national definitions.
+</i>
 </p>
 
-<p>Here it is not clear what is meant by all its dimensions according to national definitions.
- One interpretation (shown here) may be the multidimensional poverty index (MPI) which is an aggregate measure of deprivation taking into account poor health, 
-lack of education, inadequate living standard, lack of income, disempowerment, poor quality of work and threat from violence.  </p>
 
 <p> <b>Goal- </b> By 2030 reduce at least by half the proportion of men, women and children of all ages living in poverty in all its dimensions according to national
  definitions.</p>
@@ -244,7 +240,7 @@ lack of education, inadequate living standard, lack of income, disempowerment, p
 <br>
 <br>
 <br>
-<br>
+
 
 <hr>
 
@@ -257,17 +253,17 @@ lack of education, inadequate living standard, lack of income, disempowerment, p
 <br>
  
 <div class="para">
-<p> SDG INDICATOR 1.3.1</p>
-<p> Population covered by social protection floors/systems </p>
+<p> <b>SDG INDICATOR 1.3.1</p>
+<p> Population covered by social protection floors/systems </b> </p>
 <br>
 
-<p> Definition: Indicator 1.3.1 is the proportion of population 
+<p> Definition: <i>Indicator 1.3.1 is the proportion of population 
 covered by social protection floors/systems, by sex, distinguishingchildren, unemployed persons, older persons, persons with disabilities, pregnant women,
-newborns, work-injury victims and the poor and the vulnerable.</p>
-
+newborns, work-injury victims and the poor and the vulnerable.</i></p>
+<br>
 <p><b> Goal:</b> Implement nationally appropriate social protection systems and measures for all, including floors, and by 2030 achieve substantial 
 coverage of the poor and the vulnerable.</p>
-
+<br>
 <b> Additional charts :</b>
 <br>
 <a href="https://ourworldindata.org/grapher/adequacy-of-social-insurance-programs" target="_blank">Adequacy of social insurance systems</a> 
@@ -294,16 +290,17 @@ coverage of the poor and the vulnerable.</p>
 <br>
 <br>
 <div class="para">
-<p> SDG INDICATOR 1.4.1</p>
-<p>Access to basic services</p>
-
-Definition: Indicator 1.4.1 is the proportion of population living in households with access to basic services.
-
-Goal: By 2030 ensure that all men and women, in particular the poor and the vulnerable, have access to basic services. This sets a target of 
+<p> <b>SDG INDICATOR 1.4.1</p>
+<p>Access to basic services </b> </p>
+<br>
+Definition:<i> Indicator 1.4.1 is the proportion of population living in households with access to basic services.
+</i>
+<br><br>
+<b>Goal:</b> By 2030 ensure that all men and women, in particular the poor and the vulnerable, have access to basic services. This sets a target of 
 universal access to basic services for all households.
 
-<br>
-More research: Further data and research can be found at the Our World in Data entries on <a href="https://ourworldindata.org/water-use-stress" target="_blank">Water Access, Consumption & Sanitation,</a> 
+<br><br>
+<b>More research: </b> data and research can be found at the Our World in Data entries on <a href="https://ourworldindata.org/water-use-stress" target="_blank">Water Access, Consumption & Sanitation,</a> 
 
 <a href="https://ourworldindata.org/energy" target="_blank"> Energy Production & Changing Energy sources,</a> 
 
@@ -312,14 +309,17 @@ More research: Further data and research can be found at the Our World in Data e
 <br>
 <br>
 <br>
-<p>SDG INDICATOR 1.4.2</p>
-<p>Secure tenure rights to land</p>
+<br>
+<br>
+<br>
+<p><b>SDG INDICATOR 1.4.2</p>
+<p>Secure tenure rights to land </b></p>
 
 <br>
-<p>Definition: Indicator 1.4.2 is the proportion of total adult population with secure tenure rights to land, (a) with legally recognized documentation, and (b) 
-who perceive their rights to land as secure, by sex and type of tenure.</p>
+<p>Definition:<i> Indicator 1.4.2 is the proportion of total adult population with secure tenure rights to land, (a) with legally recognized documentation, and (b) 
+who perceive their rights to land as secure, by sex and type of tenure.</i></p>
 <br>
-Goal: By 2030 ensure that all men and women, in particular the poor and the vulnerable, have equal rights to economic resources, as well as access to basic services, 
+<b>Goal:</b> By 2030 ensure that all men and women, in particular the poor and the vulnerable, have equal rights to economic resources, as well as access to basic services, 
 ownership and control over land and other forms of property.
 </div>
 <br>
@@ -342,53 +342,65 @@ ownership and control over land and other forms of property.
      <br>
  
 <div class="para">
-<p> SDG INDICATOR 1.5.1 </p>
-<p>Deaths and affected persons from natural disasters</p>
+<p><b> SDG INDICATOR 1.5.1 </p>
+<p>Deaths and affected persons from natural disasters </b></p>
 <br>
-<p> Definition: Indicator 1.5.1 is the number of deaths, missing persons and directly affected persons attributed to disasters.</p>
-
+<p> Definition: <i>Indicator 1.5.1 is the number of deaths, missing persons and directly affected persons attributed to disasters.</i></p>
+<br>
 <p><b>Goal:</b> By 2030 build the resilience of the poor and those in vulnerable situations and reduce their exposure and vulnerability to climate-related 
 extreme events and other environmental disasters.</p>
+<br>
 
-
-<p>More research: Further data and research can be found at the Our World in Data entry on 
+<p> <b>More research:</b> Further data and research can be found at the Our World in Data entry on 
 <a href="https://ourworldindata.org/natural-disasters" target="_blank">Natural Catastrophes.</a> 
 </p>
+<br>
+<p><b> Additional charts:</b>
 
-<p> Additional charts:</p><br>
+</p>
+  
 <a href="https://ourworldindata.org/grapher/total-affected-by-natural-disasters?country=~All+natural+disasters" target="_blank">Number affected by natural disasters</a> 
 <br>
 <br>
+<br>
+<br>
+<br>
+<br>
 
-<p>SDG INDICATOR 1.5.2</p>
-<p>Direct economic loss from natural disasters</p>
-
-<p>Definition: Indicator 1.5.2 is the direct economic loss attributed to disasters in relation to global gross domestic product (GDP).
-
+<p><b>SDG INDICATOR 1.5.2</p>
+<p>Direct economic loss from natural disasters </b> </p>
+<br>
+<p>Definition: <i>Indicator 1.5.2 is the direct economic loss attributed to disasters in relation to global gross domestic product (GDP).
+</i>
 </p>
+<br>
 <p><b> Goal:</b> By 2030 build the resilience of the poor and those in vulnerable situations and reduce their exposure and 
 vulnerability to climate-related extreme events and other environmental disasters.</p>
-
-<p>Additional charts:</p>
+<br>
+<p><b>Additional charts:</b></p>
 <a href="https://ourworldindata.org/grapher/direct-disaster-economic-loss?tab=chart" target="_blank">Absolute economic losses from disasters by country</a> 
 <br>
 
 <a href="https://ourworldindata.org/grapher/weather-losses-share-gdp" target="_blank">Global weather-related disaster losses as a share of GDP</a> 
 <br>
 <br>
+<br>
+<br>
+<br>
+<br>
 </div>
 
 <div class="para">
-<p>SDG INDICATOR 1.5.3 </p>
-<p>Disaster risk reduction strategies</p>
-
-<p>Definition: Indicator 1.5.3 is the number of countries that adopt and implement national disaster risk reduction strategies in line with the Sendai Framework 
-for Disaster Risk Reduction 2015–2030.</p>
-
+<p><b>SDG INDICATOR 1.5.3 </p>
+<p>Disaster risk reduction strategies </b> </p>
+<br>
+<p>Definition: <i>Indicator 1.5.3 is the number of countries that adopt and implement national disaster risk reduction strategies in line with the Sendai Framework 
+for Disaster Risk Reduction 2015–2030. </i></p>
+<br>
 <p> <b>Goal:</b> By 2030 build the resilience of the poor and those in vulnerable situations and reduce their exposure and vulnerability
  to climate-related extreme events and other environmental disasters.</p>
-
-<p>More research: Further data and research can be found at the Our World in Data entry on
+<br>
+<p><b>More research: </b> data and research can be found at the Our World in Data entry on
 <a href="https://ourworldindata.org/natural-disasters" target="_blank"> natural catastrophes.</a> 
 
 </p>
@@ -412,25 +424,30 @@ for Disaster Risk Reduction 2015–2030.</p>
      <br> 
 <div class="para">
 
-<p>SDG INDICATOR 1.A.1</p>
-<p> Domestic resources to poverty reduction programmes </p>
-<p>Definition: Indicator 1.a.1 is the proportion of domestically generated resources allocated by the government directly to poverty reduction programmes.</p>
-
-<p>Goal: By 2030 Ensure significant mobilization of resources from a variety of sources to implement programmes and policies to end poverty in all its dimensions.</p>
+<p><b>SDG INDICATOR 1.A.1</p>
+<p> Domestic resources to poverty reduction programmes </b> </p>
+<br>
+<p>Definition:<i> Indicator 1.a.1 is the proportion of domestically generated resources allocated by the government directly to poverty reduction programmes.</i></p>
+<br>
+<p><b>Goal:</b> By 2030 Ensure significant mobilization of resources from a variety of sources to implement programmes and policies to end poverty in all its dimensions.</p>
 <br>
 <br>
-<p>SDG INDICATOR 1.A.2</p>
-<p>Government spending on essential services</p>
-
-<p>Definition: Indicator 1.a.2 is the proportion of total government spending on essential services (education, health and social protection).</p>
-<p>Goal: By 2030 Ensure significant mobilization of resources to implement programmes and policies to end poverty in all its dimensions.
+<br>
+<br>
+<br>
+<p><b>SDG INDICATOR 1.A.2</p>
+<p>Government spending on essential services </b> </p>
+<br>
+<p>Definition: <i>Indicator 1.a.2 is the proportion of total government spending on essential services (education, health and social protection).</i>/p>
+<p><b>Goal:</b> By 2030 Ensure significant mobilization of resources to implement programmes and policies to end poverty in all its dimensions.
 There is no defined target level of government spending for this indicator.</p>
 <br>
-<p>More research: Further data and research can be found at the Our World in Data entries on <a href=" https://ourworldindata.org/financing-healthcare" target="_blank">Financing Healthcare </a> and
+<p><b>More research:</b> Further data and research can be found at the Our World in Data entries on <a href=" https://ourworldindata.org/financing-healthcare" target="_blank">Financing Healthcare </a> and
 
 <a href="https://ourworldindata.org/government-spending " target="_blank"> Public Spending. </a> 
-<br>
- <p> Additional charts:
+<br><br>
+ <p><b> Additional charts:</b>
+  <br>
 <a href="https://ourworldindata.org/grapher/social-spending-oecd-longrun " target="_blank">Social spending</a> 
  </div>
 <br>
@@ -451,9 +468,11 @@ There is no defined target level of government spending for this indicator.</p>
  <br>
  <br>
 <div class="para">
-<p> SDG INDICATOR 1.B.1 </p>
-<p>Definition: Indicator 1.B.1 is the Pro-poor public social spending. </p>
-<p>Goal: Create sound policy frameworks at the national, regional and international levels, based on pro-poor and gender-sensitive development strategies,
+<p> <b>SDG INDICATOR 1.B.1 </b></p>
+  <br>
+<p>Definition: <i>Indicator 1.B.1 is the Pro-poor public social spending.</i></p>
+<br>
+<p><b>Goal:</b> Create sound policy frameworks at the national, regional and international levels, based on pro-poor and gender-sensitive development strategies,
  to support accelerated investment in poverty eradication actions.</p>
 </div>
 
