--- a/action.html
+++ b/action.html
@@ -38,7 +38,7 @@
     <div class="slideshow-container">
 
         <div class="mySlides fade">
-          <img src="images/cvr10.jpg" style="width:100%"
+          <img src="images/cvr10.jpg" style="width:100%">
         </div>
         
         <div class="mySlides fade">
@@ -494,9 +494,38 @@ There is no defined target level of government spending for this indicator.</p>
  <br>
  <br>
 
+ <div class="project-counter-wrp">
+   <ul>
+     <li>
+      <i class="fa fa-money" aria-hidden="true"></i>
+      <p id="number1" class="number">400</p>
+      <span></span>
+      <p>Donation Projects</p>
+     </li>
+
+     <li>
+      <i class="fa fa-handshake-o" aria-hidden="true"></i>
+      <p id="number1" class="number">150</p>
+      <span></span>
+      <p>Volunteer Projects</p>
+     </li>
+
+     <li>
+      <i class="fa fa-users" aria-hidden="true"></i>
+      <p id="number1" class="number">550</p>
+      <span></span>
+      <p>Employment Oppertunities</p>
+     </li>
+   </ul>
+ </div>
 
 
- </p>
+
+ <p class="para001">As a not for profit community, <b>Grow Together</b> us, always trying to do our best to achieve the above-mentioned
+  targets.The Sustainable Development Goals (SDGs) are a bold commitment to finish what we started and
+  end poverty in all forms and dimensions by 2030.</p>
+
+ 
  <br>
  <br>
  <br>
