--- a/volunteer.html
+++ b/volunteer.html
@@ -72,7 +72,7 @@
   }
         </script>
 
-    <div>
+    <div class="voldiv">
         <br>
     <center>
     <H1 class="cont-headi">
@@ -88,7 +88,7 @@
     </center>
     </p>
     </div>
-    <div>
+    <div class="voldiv">
         <center>
         <h1 class="cont-headi">
             Become a volunteer
@@ -106,7 +106,9 @@
     </div>
     <div>
     </center>
-        <h1>
+
+    <div class="voldiv">
+        <h1 class="headvol">
             As a volunteer you will:
         </h1>
         <ul type="disc">
@@ -124,23 +126,64 @@
                 </li>
         </ul>
     </div>
-    <div>
-        <h2>
+
+    <div class="voldiv">
+        <h2 class="headvol">
             No previous experiences? No worries. 
         </h2>
-        <h4>
+        <h3>
             Grow Together provides training and coaching to all of our advocates. <br>
-            <b>Signup to volunteer.</b>
-        </h4>
-        <img src="images/volcvr3.png" height="300">
-    </div>
-    <div>
-        <p>
+            
+        </h3>
+    
+        <p class="headpara">
             Our volunteer advocates come from all walks of life but share a desire to stand up for issues they care about, 
             be heard, and make an impact. At  Grow Together, we teach you the nuts and bolts of how to do that. We teach you 
             how to become an advocate. Volunteer with Grow Together and make a real difference in ending poverty!
 
         </p>
+
+        <h3>
+        <b>Signup to volunteer.</b>
+        </h3>
+
     </div>
+
+    <img src="images/hands.png" height="300">
+
+    <!--Footer starts here-->
+  <footer>
+    <div class="footer-content">
+        <h3 class="foottext">Gather With Grow Together</h3>
+
+        <p>There are tons of people all around the world, suffering from poverty day by day.Therefore,
+          here is the unite of the Non-Government Organizations, Volunteers and all the warm-hearted
+          people who raise hands to Grow Together."Grow Together" is the cloud-based platform of all
+          these people.</p>
+
+        <ul class="socials">
+            <li><a href="www.facebook.com"><i class="fa fa-facebook"></i></a></li>
+            <li><a href="www.twitter.com"><i class="fa fa-twitter"></i></a></li>
+            <li><a href="www.plus.google.lk"><i class="fa fa-google-plus"></i></a></li>
+            <li><a href="www.youtube.com"><i class="fa fa-youtube"></i></a></li>
+            <li><a href="www.linkedin.microsoft.com"><i class="fa fa-linkedin-square"></i></a></li>
+        </ul>
+    </div>
+    <div class="footer-bottom">
+        <p>copyright &copy; <a href="#">GrowTogether</a>  </p>
+                <div class="footer-menu">
+                  <ul class="f-menu">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="action.html">Action</a></li>
+                    <li><a href="volunteer.html">Volunteer</a></li>
+                    <li><a href="donations.html">Donate</a></li>
+                    <li><a href="aboutus.html">Contact Us</a></li>
+                  </ul>
+                </div>
+    </div>
+
+</footer>
+<!--Footer ends here-->
+
 </body>
 </html>
