--- a/donations.html
+++ b/donations.html
@@ -54,6 +54,7 @@
                 <div class="container">
                   <h4 class="card-title">AWARENESS SESSIONS</h4> 
                   <p class="crd-p">For poor women in Panama City, there are many obstacles to overcoming the cycle of poverty, but maybe none so fundamental and inadequately addressed as lack of motivation and self-esteem. </p> 
+                  <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Join</button>
                 </div>
             </div>
 
@@ -61,7 +62,8 @@
                 <img class="card-img" src="Images/books-donation-box_16x9.jpg" alt="Avatar" style="width:100%">
                 <div class="container">
                   <h4 class="card-title">BOOK DONATIONS</h4> 
-                  <p class="crd-p">Book Aid International is the UK’s leading international book donation and library development charity. Every year we give millions of people the opportunity to read by providing brand new books to thousands of libraries, schools, universities, refugee camps, hospitals and prisons worldwide. </p> 
+                  <p class="crd-p">Book Aid International is the UK’s leading international book donation and library development charity. Every year we give millions of people the opportunity to read by providing brand new books to thousands of libraries, schools, universities, refugee camps, hospitals and prisons worldwide. </p>
+                  <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Donate</button>
                 </div>
             </div>
 
@@ -69,7 +71,8 @@
                 <img class="card-img" src="Images/crd.jpg" alt="Avatar" style="width:100%">
                 <div class="container">
                   <h4 class="card-title">CLOTHES DONATIONS</h4> 
-                  <p class="crd-p">We offer a hassle-free way of recycling and getting rid of unwanted clothing. Whether it’s your own clothes or old baby clothes, you don’t even need to leave the house as we’ll collect them for you! If you’re in need of a charity clothes collection from home, Collect My Clothes is on hand.</p> 
+                  <p class="crd-p">We offer a hassle-free way of recycling and getting rid of unwanted clothing. Whether it’s your own clothes or old baby clothes, you don’t even need to leave the house as we’ll collect them for you! If you’re in need of a charity clothes collection from home, Collect My Clothes is on hand.</p>
+                  <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Donate</button> 
                 </div>
             </div>
         </div>
