--- a/donations.html
+++ b/donations.html
@@ -64,7 +64,7 @@
                 <div class="container">
                   <h4 class="card-title">BOOK DONATIONS</h4> 
                   <p class="crd-p">Book Aid International is the UK’s leading international book donation and library development charity. Every year we give millions of people the opportunity to read by providing brand new books to thousands of libraries, schools, universities, refugee camps, hospitals and prisons worldwide. </p> <br>
-                  <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Collaboration</button>
+                  <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Collaborate</button>
                 </div>
             </div>
 
@@ -73,7 +73,7 @@
                 <div class="container">
                   <h4 class="card-title">CLOTHES DONATIONS</h4> 
                   <p class="crd-p">We offer a hassle-free way of recycling and getting rid of unwanted clothing. Whether it’s your own clothes or old baby clothes, you don’t even need to leave the house as we’ll collect them for you! If you’re in need of a charity clothes collection from home, Collect My Clothes is on hand.</p> <br>
-                  <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Contribution</button> 
+                  <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Contribute</button> 
                 </div>
             </div>
         </div>
