Added images and updated index

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <div class="card1-cont" href="action.html">
       <div class="card1">
         <a href="action.html">
-          <img class="card1-img" src="Images/card01.png" alt="Avatar" style="width:100%"> </a>
+          <img class="card1-img" src="Images/action.jpg" alt="Avatar" style="width:100%"> </a>
           <div class="container">
             <h4 class="card1-title">OUR ACTIONS</h4> 
             <p class="crd1-p">For poor women in Panama City, there are many obstacles to overcoming the cycle of poverty, 
@@ -142,7 +142,7 @@
 
       <div class="card1">
         <a href="contribution.html">
-          <img class="card1-img" src="Images/books-donation-box_16x9.jpg" alt="Avatar" style="width:100%"> </a>
+          <img class="card1-img" src="Images/con.jpg" alt="Avatar" style="width:100%"> </a>
           <div class="container">
             <h4 class="card1-title">CONTRIBUTORS</h4> 
             <p class="crd1-p">Book Aid International is the UK’s leading international book donation and library development 
@@ -156,7 +156,7 @@
 
       <div class="card1">
         <a href="aboutus.html">
-          <img class="card1-img" src="Images/crd.jpg" alt="Avatar" style="width:100%"> </a>
+          <img class="card1-img" src="Images/team.jpg" alt="Avatar" style="width:100%"> </a>
           <div class="container">
             <h4 class="card1-title">OUR TEAM</h4> 
             <p class="crd1-p">We offer a hassle-free way of recycling and getting rid of unwanted clothing. 
