--- a/contribution.html
+++ b/contribution.html
@@ -287,6 +287,10 @@ p {
                       <div class="main" id="section3">
                         <center>
                       <h2 class="head3">Organizations</h2>
+                      <p class="para01">These 5 Organizations have been providing assistance through various projects to countries facing poverty in the world for many years.
+                        It also works to improve the health of those countries.It also provides them with the educational knowledge they need for their development.
+                        They support many sustainability development goals,not just poverty.</p>
+                        
                       </center>
                       <div class="card-cont">
                         <div class="card">
