--- a/contribution.html
+++ b/contribution.html
@@ -138,7 +138,12 @@ p {
           <img class="card-img" src="Images/organizations.jpg" alt="Avatar" style="width:100%">
           <div class="container">
             <h4 class="card-title">Organizations</h4> 
-            <p class="crd-p"></p>
+            <p class="crd-p">Organizations Dedicated to Fight Poverty</p><br>
+				  <p>Many nonprofits, charities, and NGOs worldwide are committed to reducing poverty.
+				  They are taking different approaches that create tangible, long-lasting solutions to reduce poverty.<br><br>
+				  Organizations like these have the ability to create a ripple effect in the lives and communities of those who truly need it.</p>
+				  
+            
     <p><button class="button"> <a href="#section3">Read More</a></button></p>
     </div>
       </div>
