--- a/volunteer.html
+++ b/volunteer.html
@@ -20,8 +20,8 @@
     
 
     <div class="topnav">
-		
-		<img class="navimg"src="images/navimage.png" >
+		<a href="index.html">
+		<img class="navimg"src="images/navimage.png" ></a>
 		<a href="aboutus.html">ABOUT</a>
 		<a href="Contribution.html">CONTRIBUTION</a>
 		<a href="action.html">ACTION</a>
