update index html

--- a/index.html
+++ b/index.html
@@ -132,9 +132,10 @@
           <img class="card1-img" src="Images/action.jpg" alt="Avatar" style="width:100%"> </a>
           <div class="container">
             <h4 class="card1-title">OUR ACTIONS</h4> 
-            <p class="crd1-p">For poor women in Panama City, there are many obstacles to overcoming the cycle of poverty, 
-              but maybe none so fundamental and inadequately addressed as lack of motivation and self-esteem.
-              but maybe none so fundamental and inadequately addressed as lack of motivation and self-esteem. </p>
+            <p class="crd1-p">
+              Check out our successfull actions towards the poverty. All the things we have done in these past few years
+              to raise our humanity
+           </p>
               <button class="button" onclick="document.location='action.html'">Read More</button> 
           </div>
       </div>
@@ -142,7 +143,7 @@
 
       <div class="card1">
         <a href="contribution.html">
-          <img class="card1-img" src="Images/con.jpg" alt="Avatar" style="width:100%"> </a>
+          <img class="card1-img" src="Images/cont.jpg" alt="Avatar" style="width:100%"> </a>
           <div class="container">
             <h4 class="card1-title">CONTRIBUTORS</h4> 
             <p class="crd1-p">Book Aid International is the UK’s leading international book donation and library development 
