--- a/volunteer.html
+++ b/volunteer.html
@@ -16,12 +16,11 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-
     
 
     <div class="topnav">
-		<a href="index.html">
-		<img class="navimg"src="images/navimage.png" ></a>
+		
+		<img class="navimg"src="images/navimage.png" >
 		<a href="aboutus.html">ABOUT</a>
 		<a href="Contribution.html">CONTRIBUTION</a>
 		<a href="action.html">ACTION</a>
